--- a/style.css
+++ b/style.css
@@ -5,41 +5,91 @@
 
 
 body {
-   background-color: rgb(0, 110, 184); 
+   background: url("Background.jpg");
+   
 }
 
 h1 {
     text-align: center;
     font-size: 70px;
   font-weight: 600;
+  background-color: #04AA6D;
   background-image: linear-gradient(to left, #553c9a, #b393d3);
-  color: transparent;
+  color: white;
   background-clip: text;
   -webkit-background-clip: text;
-  border-top: 15px solid red;
-  border-bottom: 15px solid red;
+  font-family: 'Rubik Dirt', cursive;
 }
 
 h2 {
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+    color:#3c04d5
 }
 
 
 .para-container { 
-    color: white;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
     text-align: center;
     font-size: large;
     font-style: italic;
-    display: flexbox;
+    margin: auto;
+    width: 350px;
+   
 }
 
 img { 
 margin-right: auto;    
 margin-left: auto;
 display: block;
-width: 10%;
+width: 15%;
 border: 10px solid transparent;
 padding: 15px;
 }
+
+.newbutton {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    background-color: #04AA6D;
+    
+} 
+
+
+button:hover {
+    cursor: pointer;
+    padding: .7rem 1.2rem;
+
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
